@startuml

title __MODELO's Class Diagram__\n

  namespace TFA {
    namespace modelo {
      class TFA.modelo.NBAModel {
          {static} - instance : NBAModel
          - teamsMap : HashMap<String, Integer>
          {static} + getInstance()
          + getTeamByName()
          + getTeamsList()
          + setPlayersListFromTeam()
          + setTeamList()
          + setTeamStanding()
          + setTeamStats()
          - NBAModel()
      }
    }
  }
  

  namespace TFA {
    namespace modelo {
      class TFA.modelo.Player {
          - id : int
          - jersey : String
          - lastName : String
          - name : String
          - position : String
          + Player()
          + toString()
      }
    }
  }
  

  namespace TFA {
    namespace modelo {
      class TFA.modelo.Team {
          ~ results : HashMap<String, Integer>
          - conference : String
          - crestUrl : String
          - id : int
          - name : String
          - players : ArrayList<Player>
          - rank : int
          - shortName : String
          - teamStats : HashMap<String, Integer>
          + Team()
          + Team()
          + addResult()
          + addTeamStats()
          + getConference()
          + getCrestUrl()
          + getId()
          + getName()
          + getPlayers()
          + getRanking()
          + getShortName()
          + getTeamResults()
          + getTeamStats()
          + setPlayers()
          + setRank()
      }
    }
  }
  

  TFA.modelo.NBAModel o-- TFA.modelo.datafinder.StrategyContext : strategyContext
  TFA.modelo.Team o-- TFA.modelo.Player : players
    TFA.modelo.NBAModel o-- TFA.modelo.Team : teamsMap


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
